<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.noti.NotiActivity">

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noit_des" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/NotiOnoff"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noti_onoff" />

        <TextView
            android:id="@+id/guid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guid" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/glogin"
            android:layout_width="match_parent"
            android:text="@string/glogin"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            app:cornerRadius="17dp"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconSize="20dp"
            app:rippleColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/HTU"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/noti_HowToUse" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>